--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -104,9 +104,9 @@
       {% if author.vine %}
         <li><a href="https://vine.co/u/{{ author.vine }}"><i class="fab fa-fw fa-vine" aria-hidden="true"></i> Vine</a></li>
       {% endif %}
-      {% if author.googlescholar %}
+      <!-- {% if author.googlescholar %}
         <li><a href="{{ author.googlescholar }}"><i class="ai ai-google-scholar ai"></i> Google Scholar</a></li>
-      {% endif %}
+      {% endif %} -->
       <!--
       {% if author.researchgate %}
         <li><a href="{{ author.researchgate }}"><i class="ai ai-researchgate ai" aria-hidden="true"></i> ResearchGate</a></li>
